--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,11 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.5</version>
         </plugin>
-
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.0.2</version>
+        </plugin>
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.0</version>
